service.yaml
# service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ingress-client-service
  namespace: bill-test
spec:
  selector:
    app: ingress-client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
