ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-client-ingress
  namespace: bill-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  -  http:
      paths:
      - path: /client
        pathType: Prefix
        backend:
          service:
            name: ingress-client-service
            port:
              number: 80
